--- a/index.html
+++ b/index.html
@@ -11,34 +11,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <div class="container">
-        <img class="image" src="images/donation4.jpg" alt="flood image">
-        <h1 class="title">Lets Help Those Who Are More In Need</h1>
-        <p class="title2">Help the poor, to serve nation,who are living in critical situation. They really need us to
-            survive</p>
-        <a class="link-button" target="_blank" href="https://facebook.com">Donatee Now</a>
+    <div class="banner">
+        <div>
+            <img class="image" src="images/donation4.jpg" alt="flood image">
+        </div>
+        <div>
+            <h1 class="title">Lets Help Those Who Are More In Need</h1>
+            <p class="title2">Help the poor, to serve nation,who are living in critical situation. They really need us
+                to survive. About 9.2% of the world, or 689 million people, live in extreme poverty on less than $1.90 a
+                day, according to the World Bank.</p>
 
+            <a class="link-button" target="_blank" href="https://facebook.com">Donatee Now</a>
+        </div>
     </div>
+</head>
+
+<body>
 
     <div>
-        <h1 class="title">Donate Today</h1>
+        <h2 class="title">Donate Today</h2>
         <p class="title2">Help the poor, to serve nation,who are living in critical situation. They really need us to
             survive</p>
 
         <a class="link-button" target="_blank" href="https://facebook.com">Donatee Now</a>
+    </div>
 
+    <div class="dnt-btn">
+        <p class="p1">100 tk</p>
+        <p class="p2">200 tk</p>
+        <p class="p3">300 tk</p>
+        <p class="p4">400 tk</p>
+        <p class="p5">500 tk</p>
+    </div>
+
+
+
+
+    <div class="card-section">
+        <div class="card-title">
+            <h1>Our Donate Plan</h1>
+            <p>Help the poor, to serve nation,who are living in critical situation. They really need us to
+                survive</p>
+        </div>
+
+
+        <div class="card-segment">
+            <div class="card1">
+                <div class="card-description">
+                    <img src="icons/food.png" alt="" />
+                    <h3>Food for Poor</h3>
+                    <p>Help the poor, to serve nation,who are living in critical situation. They really need us to
+                        survive.
+                    </p>
+                </div>
+            </div>
+
+            <div class="card2">
+                <div class="card-description">
+                    <img src="icons/shelter.png" alt="" />
+                    <h3>Shelter for Poor</h3>
+                    <p>Help the poor, to serve nation,who are living in critical situation. They really need us to
+                        survive.
+                    </p>
+                </div>
+            </div>
+
+            <div class="card3">
+                <div class="card-description">
+                    <img src="icons/Frame-1.png" alt="" />
+                    <h3>Financial support for Poor</h3>
+                    <p>Help the poor, to serve nation,who are living in critical situation. They really need us to
+                        survive.
+                    </p>
+                </div>
+            </div>
+
+        </div>
 
     </div>
+
+
+
+
 
 
     <footer>
         <h1 class="font-style"><span class="white">Be Humble</span></h1>
-        <h3>i'm gonna do it</h3>
+        <h3>show the world you care...</h3>
     </footer>
-
-</head>
-
-<body>
 
 
 
