--- a/index.html
+++ b/index.html
@@ -87,7 +87,46 @@
             </div>
 
         </div>
+    </div>
 
+    <div>
+        <div class="flexible-container">
+            <div class="half-width">
+                <img src="images/donation9.jpg">
+            </div>
+            <div class="half-width">
+                <h1><strong>Help without Limits</strong> </h1>
+                <p class="para">Although global poverty has more recently resumed its pre-pandemic downward trajectory,
+                    between 75 million and 95 million additional people could be living in extreme poverty in 2022
+                    compared to pre-COVID-19 projections, due to the lingering effects of the pandemic, the war in
+                    Ukraine, and rising inflation.
+
+                    Food inflation can have a particularly devastating impact on poor families. A typical person in a
+                    low-income country spends about two-thirds of their resources on food, while the same figure for the
+                    typical person in a high-income country is closer to 25%.</p>
+                <a class="link-button1" target="_blank" href="">To contribute</a>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1><strong>Contribute to eradicate poverty</strong> </h1>
+                <p class="para">Although global poverty has more recently resumed its pre-pandemic downward trajectory,
+                    between 75 million and 95 million additional people could be living in extreme poverty in 2022
+                    compared to pre-COVID-19 projections, due to the lingering effects of the pandemic, the war in
+                    Ukraine, and rising inflation.
+
+                    Food inflation can have a particularly devastating impact on poor families. A typical person in a
+                    low-income country spends about two-thirds of their resources on food, while the same figure for the
+                    typical person in a high-income country is closer to 25%.</p>
+                <a class="link-button1" target="_blank" href="">To contribute</a>
+            </div>
+            <div class="half-width">
+                <img src="images/donation13.jpg">
+            </div>
+        </div>
     </div>
 
 
