--- a/index.html
+++ b/index.html
@@ -129,6 +129,23 @@
         </div>
     </div>
 
+    <div class="last-part">
+        <div class="bonus">
+            <p>For details search here</p>
+            <input type="email" name="donate@gmail.come-mail" id="E-mail">
+
+        </div>
+        <ul>
+            Company<br>
+            Contact<br>
+            Terms&Conditions<br>
+            License information<br>
+            Privacy policy<br>
+            Blog<br>
+        </ul>
+    </div>
+    </div>
+
 
 
 
